--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1099,7 +1099,7 @@ section {
   padding: 10px 12px;
 }
 
-.contact .php-email-form button[type="submit"] {
+.contact .php-email-form button[type="button"] {
   background: #0563bb;
   border: 0;
   padding: 10px 35px;
@@ -1108,7 +1108,7 @@ section {
   border-radius: 50px;
 }
 
-.contact .php-email-form button[type="submit"]:hover {
+.contact .php-email-form button[type="button"]:hover {
   background: #0678e3;
 }
 
